# protocol_fw

./: .gitignore  CMakeLists.txt  build.yml  sdkconfig.defaults
main/: CMakeLists.txt  board_pins.h  main.c
main/admin/: admin_cmd.c  admin_cmd.h
main/ble/: ble_gatt.c  ble_gatt.h
main/config/: node_config.c  node_config.h
main/lora/: mesh.c  mesh.h  sx1262.c  sx1262.h
main/proto/: mesh_proto.c  mesh_proto.h
